Toinen tärkee päivitys

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <body>
     <img src="kettu.jpg" alt="null">
     <img src="FrrozenGrafix.png" alt="null">
+	<img src="ilme.jpg" alt="null">
 </body>    
 </html>
